# Melon3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
bench/: bench.cpp
bench_compare/: README.md  box3d_scenes.cpp
docs/: GUIDE.md  LESSONS.md
examples/: README.md  dump_scene.cpp  render.py
include/: melon3d.h
src/: collide.cpp  grid.cpp  m3d_internal.h  world.cpp  xpbd.cpp
test/: test_main.cpp
tools/: amalgamate.py
